kubernetes-script/development-php-fpm.yml

apiVersion: v1
kind: Service
metadata:
  name: wip-api-php-fpm-development
  labels:
    app: wip-api-php-fpm
    organize: wipcamp10
    tier: backend
    env: development
spec:
  type: LoadBalancer
  selector:
    app: wip-api-php-fpm
    organize: wipcamp10
    tier: backend
    env: development
  ports:
  - port: 9000
    targetPort: 9000
