kubernetes-script/development-app.yml

apiVersion: v1
kind: Service
metadata:
  name: wip-api-development
  labels:
    app: wip-api
    organize: wipcamp10
    tier: backend
    env: development
spec:
  type: LoadBalancer
  selector:
    app: wip-api
    organize: wipcamp10
    tier: backend
    env: development
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wip-api-development
  labels:
    app: wip-api
    organize: wipcamp10
    tier: backend
    env: development
spec:
  rules:
  - host: api.freezer.wip.camp
    http:
      paths:
      - backend:
          serviceName: wip-api-development
          servicePort: 80
